# multi-roblox-macos

./: README.md  bundled.go  go.mod  go.sum  main.go
darwinclib/: CMakeLists.txt  CMakePresets.json
darwinclib/syncbreaker_darwin/: CMakeLists.txt  syncbreaker_darwin.c
darwinclib/urlhandler_darwin/: CMakeLists.txt  urlhandler_darwin.c
internal/backup_roblox_app/: backup_roblox_app.go  backup_roblox_app_test.go
internal/bypass_sync/: bypass_sync.go  bypass_sync_test.go
internal/close_all_app_instances/: close_all_app_instances.go  close_all_app_instances_test.go
internal/deeplink/: CustomProtocol.h  deeplink.go
internal/detect_roblox_launch/: detect_roblox_launch.go
internal/discord_link_parser/: discord_link_parser.go  discord_link_parser_test.go
internal/discord_redirect/: discord_redirect.go  discord_redirect_test.go
internal/info_plist_modifier/: info_plist_modifier.go  info_plist_modifier_test.go
internal/infoplist/: infoplist.go  infoplist_test.go
internal/macosapp/: app.go  notify.go
internal/open_app/: open_app.go  open_app_test.go
internal/ps_darwin/: process.go  processes.go
internal/robloxapp/: closeall.go  closeall_test.go  copy.go  copy_darwin.go  copy_test.go  open_darwin.go  open_test.go  path.go
internal/syncbreaker/: syncbreaker_darwin.go  syncbreaker_darwin_test.go
internal/urlhandler/: urlhandler_darwin.go  urlhandler_darwin_test.go
lib/: syncbreaker_darwin.dylib
multiroblox.app/Contents/: Info.plist
pkg/fspath/: homedir.go  libdir_darwin.go  libdir_darwin_test.go  path.go  path_test.go  (+2 more)
ui/: new_instance_button.go
(+5 files in other folders)
